--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,30 +93,14 @@ p {
     color: #ffffff;
 }
 
-/* .benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-} */
+/*Consolidated benefit brand and benefit cost into benefit*/
 
 .benefit-h3{
     margin-bottom: 10px;
     text-align: center;
 }
 
-/* .benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-} */
+/*Consolidated benefit-brand h3 and benefit-cost h3 into .benefit-h3*/
 
 .benefit-img {
     display: block;
@@ -124,18 +108,9 @@ p {
     max-width: 150px;
 }
 
-/* .benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+/* Consolidated .benefit-brand img and .benefit-cost img into .benefit-img*/
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-} */
-
+/*Renamed class to content cards to clean up html for semantic structure and more consolidating, seen on html side as well*/
 .content-cards {
     margin-bottom: 20px;
     padding: 50px;
@@ -149,6 +124,8 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+/*Deleted .footer h3 since I made a footer*/
 
 .footer {
     padding: 30px;
